Fixed #31 - Calendar | SVG icon is not visible w/material compact

--- a/themes/material/extensions/_calendar.scss
+++ b/themes/material/extensions/_calendar.scss
@@ -22,6 +22,10 @@
             color: $inputIconColor;
         }
 
+        .p-icon{
+            color: $inputIconColor;
+        }
+
         &:enabled:hover {
             background: rgba($overlayColor, .04);
         }
